# yoneylem

./: .env  .gitignore  README.md  create_view_files.sh  data.json  google_or_exp.ipynb  hello.py  milvus_examples.ipynb  new.ipynb  pyproject.toml  run.py
controllers/: add_classroom_controller.py  add_instructor_controller.py  add_lesson_controller.py  ai_chat_page_controller.py  main_page_controller.py
utils/: draw_file.py  solve_schedule.py
view_py_files/: add_classroom.py  add_instructor.py  add_lesson.py  ai_chat.py  main_page.py
view_ui_files/: add_classroom.ui  add_instructor.ui  add_lesson.ui  ai_chat.ui  main_page.ui
