[project]
name = "yoneylem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.7",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "ortools>=9.11.4210",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pymilvus>=2.5.0",
    "pyqt5>=5.15.11",
    "reportlab>=4.2.5",
    "reportlib>=3.4.0",
]